[package]
name = "vmprotect"
version = "0.2.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition.workspace = true
description = "Unofficial VMProtect SDK for Rust"
license = "MIT"
repository = "https://github.com/CertainLach/vmprotect/"

[features]
default = ["licensing", "activation", "service", "strings"]
licensing = []
# Online activation brings curl dependency on linux, which might be annoying
activation = ["licensing"]
strings = []
service = []

[dependencies]
real_c_string = "1.0"
widestring = "1.2.0"
bitflags = "2.9"
enum_primitive = "0.1.1"
num-traits = "0.2.19"
chrono = "0.4.41"
vmprotect-sys = { path = "vmprotect-sys", version = "0.1.1" }
vmprotect-macros = { path = "vmprotect-macros", version = "0.1.0" }
zeroize = { version = "1.8.1", features = ["derive"] }

[workspace]
members = ["vmprotect-sys", "vmprotect-macros"]
package.edition = "2024"
