[package]
name = "vmprotect-macros"
description = "Attribute macro for vmprotect"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
twox-hash = "2.1"
hex = "0.4.3"
proc-macro2 = "1.0.95"
